# kubernetes-stubs

./: .gitignore  MAINTAINER.md  README.md  pyproject.toml
.github/workflows/: check.yml  manually-release.yml  release.yml
codegen/: __main__.py
codegen/base/kubernetes-stubs/client/: __init__.pyi  api_client.pyi  configuration.pyi
codegen/base/kubernetes-stubs/config/: __init__.pyi
codegen/base/kubernetes-stubs/utils/: __init__.pyi  quantity.pyi
codegen/base/kubernetes-stubs/watch/: __init__.pyi  watch.py  watch.pyi
scripts/: check.sh  find-new-version-and-release.sh  get_unpublished_version.py  manually-release.sh  pypi_version.py  release.sh  requirements.txt
tests/: typecheck.py
