[tool.poetry]
name = "kubernetes-stubs-elephant-fork"
homepage = "https://github.com/lexdene/kubernetes-stubs"
description = "Type stubs for the Kubernetes Python API client"
authors = ["Nikhil Benesch <nikhil.benesch@gmail.com>", "Rami Chowdhury <rami.chowdhury@gmail.com>", "Elephant Liu"]
license = "Apache-2.0"
readme = "README.md"

# version will be updated by build script
version = "0.0.0"

packages = [
    { include = "kubernetes_ext" },
    { include = "kubernetes-stubs" },
]
include = [
    { path = "kubernetes_ext/**/*" },
    { path = "kubernetes-stubs/**/*" },
]

[dependency-groups]
dev = [
    "black",
    "inflection",
    "isort",
    "kubernetes==36.0.2",
    "mypy",
    "packaging",
    "pyright",
    "toml-cli",
    "ty",
]

[tool.mypy]
files = ["tests/typecheck.py"]
strict = true

[tool.pyright]
include = ["tests/typecheck.py"]
pythonVersion = "3.11"
typeCheckingMode = "strict"

[tool.ty.src]
include = ["tests/typecheck.py"]

[tool.ty.rules]
all = "error"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
